apps/actual/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: actual
    namespace: default

spec:
    replicas: 1
    selector:
        matchLabels:
            app: actual
    template:
        metadata:
            labels:
                app: actual
        spec:
            enableServiceLinks: false
            containers:
                - name: actual
                  image: ghcr.io/actualbudget/actual:latest-alpine
                  ports:
                      - name: http
                        containerPort: 5006
                  volumeMounts:
                      - name: data
                        mountPath: /data
            volumes:
                - name: data
                  hostPath:
                      path: /var/data/actual
                      type: DirectoryOrCreate
